# parafeed

./: .gitignore  CMakeLists.txt  CodeCheckout.md  ProjectHome.md  README.md  UserDoc.md  UserDocOld.md  parafeed.pc.in  parafeed_CI.yml
.github/workflows/: parafeed_CI.yaml  parafeed_CI.yml
Setup/: RC  Setup.IRIX.personal  Setup.IRIX64.personal  Setup.Linux  Setup.Linux.personal
Setup/MAKEFILES/: makefile.inc  makefile.tst
Setup/MAKEFILES/calc/: makefile.calc.tst
cmake/: FindReadline.cmake
code/: AddCmd.c  AddCmd.cc  AddNode.c  AddQKey.c  AddQKey.cc  AddVar.c  AddVar.cc  AllocSymb.c  AllocSymb.cc  CMakeLists.txt  CopySymb.c  CopySymb.cc  DeleteCmd.c  DeleteNode.c  DeleteTab.c  DeleteTab.cc  DeleteVar.c  ErrorObj.cc  ErrorObj.cc.string  ErrorObj.h  FreeSymb.c  FreeSymb.cc  GetKeyOffset.c  GetStdString.cc  InstallSymb.c  InstallSymb.cc  Makefile  ParseCmdLine.c  ParseCmdLine.cc  PrintVals.c  PrintVals.cc  SearchNode.c  SearchNode.cc  SearchSymb.c  SearchSymb.cc  SetCmdTab.c  SetPrompt.c  SetSymbTab.c  SetVar.c  SetVar.cc  (+131 more)
code/DEPRECATED/: cldbggetFVal.cc  cldbggetFullVal.cc  cldbggetNFVal.cc  cldbggetNIVal.cc  clgetBVal.cc  clgetFVal.cc  clgetIVal.cc  clgetNBVal.cc  clgetNIVal.cc  clgetNSVal.cc  iosupport.cc
code/calc/: CMakeLists.txt  calc.h  calc.y  calcinit.c  calclib.h  lex.l  lex.yy.c  makefile  makefile.calc  makefile.calc.generic  makefile.calc.generic.64  makefile.calc.irix  symboltable.h  tt.c  y.tab.c  y.tab.h  yyerror.c
code/calc/doc/: calc.doc
code/calc/nocmake_makefiles/: makefile  makefile.calc.generic
code/nocmake_makefiles/: makefile  makefile.calc  makefile.calc.generic  makefile.calc.generic.64  makefile.calc.irix  makefile.cllib.IRIX  makefile.cllib.generic  makefile.cllib.generic.64
code/test/: colour.sh  testing.text  text.colour  tst.c  tst.config  tst2.c  tst2.cc  tst3.cc  tstshell.c  tt.c  usave.cc
code/test/unittest/: CMakeLists.txt  ParafeedTest.h  test_parafeed_interactive.cpp  test_parafeed_noninteractive.cpp
doc/: INSTALL.readme  calc.doc  cl.doc  newcommands.tex  yes.htm
spack_package/: repo.yaml
trunk/Setup/: Setup.IRIX  Setup.IRIX64  Setup.Linux  Setup.Solaris  Setup.Solaris.personal
trunk/Setup/MAKEFILES/: makefile.cllib.Solaris  makefile.cllib.generic
trunk/code/: AddCmd.c  AddNode.c  AddQKey.c  AddVar.c  AllocSymb.c  CopySymb.c  DeleteCmd.c  DeleteNode.c  DeleteTab.c  DeleteVar.c  ErrorObj.cc  ErrorObj.cc.string  ErrorObj.h  FreeSymb.c  GetKeyOffset.c  InstallSymb.c  ParseCmdLine.c  PrintVals.c  SearchNode.c  SearchSymb.c  SetCmdTab.c  SetPrompt.c  SetSymbTab.c  SetVar.c  SetVar.cc  SymbTab.h  TransferTab.c  boolError.h  callbacks.c  callbacks_awk.c  cl.h  clBreakStr.cc  clCleanUp.c  clError.h  clGlobals.h  clIsInteractive.c  clIsInteractive.cc  clReset.c  clRestartShell.c  clRetry.c  (+72 more)
trunk/code/calc/: calc.h  calc.tab.h  calc.y  calcinit.c  calclib.h  lex.l  lex.yy.c  makefile.calc  makefile.calc.generic  makefile.calc.generic.64  makefile.calc.irix  y.tab.c  y.tab.h  yyerror.c
trunk/code/calc/doc/: calc.doc
trunk/code/test/: tst.c  tst2.c  tt.c
trunk/doc/: no.htm  uinew.tex
wiki/: CodeCheckout.wiki  UserDoc.wiki  UserDoc2.wiki  UserDocOld.wiki
